--- a/multi_session-app/src/App.css
+++ b/multi_session-app/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.flex {
+  display: flex;
+  padding-top: 16px;
+}
+.between {
+  justify-content: space-between;
+}
